@@ -1,3 +1,7 @@
 test:
 	dzil test
 
+tidy:
+	find . -name '*.p?.bak' -delete
+	find . -name '*.p[lm]' -o -name '*.t' | xargs perltidy -pro=t/rc/.perltidyrc --backup-and-modify-in-place -bext=tidyup
+	find . -name '*.tidyup' -delete
