@@ -6,4 +6,5 @@ requires 'Mojolicious', '6.36';
 on test => sub {
     requires 'Test::More', '0.96';
     requires 'Test::Exception';
+    requires 'Test::MockModule';
 };
