@@ -2,6 +2,8 @@ Revision history for WebService-MyAffiliates
 
 {{$NEXT}}
 
+        - Add support for creating affiliate accounts.
+
 0.08      2017-02-27 06:42:57+00:00 UTC
       - Switch to dzil
 
